--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -30,11 +21,79 @@ body {
   min-height: 100vh;
 }
 
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+
+.todo-input{
+  width: 416px;
+  height: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 10px cyan;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: none;
+}
+
+.addBtn{
+  margin-top: 20px;
+  width: 60px;
+  height: 52px;
+  padding: 5px;
+  border: none;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 2px 2px 10px cyan;
+}
+.todo{
+  font-weight: bold;
+  padding: 0px 15px;
+}
 .okey-todo{
   color: green;
   text-decoration: line-through
 }
 
-.no-todo{
-  color: red
+.delete-btn{
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.edit-btn{
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.save-btn{
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.edit-okey-btn{
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.edit-input{
+  width: 300px;
+  height: 30px;
+}
+.todos{
+  max-width: 458px;
+  margin-top: 30px;
+  box-shadow: 2px 2px 10px cyan;
+  word-wrap: break-word;
+  padding: 10px;
+}
+.btns-div{
+  display: flex;
+  gap: 5px;
+}
+
+.new-todo-div{
+  display: flex;
+  align-items: flex-end;
 }
